# tauri-bindgen

./: .gitignore  Cargo.toml  DEPENDENTS.md  LICENSE  README.md  TODO.md  renovate.json5
.github/: dependabot.yml
.github/workflows/: NPM.yml  Node.yml  Rust.yml
Source/: completions.rs  logger.rs  main.rs
crates/core/: Cargo.toml
crates/core/Source/: lib.rs
crates/gen-guest-js/: Cargo.toml
crates/gen-guest-js/Source/: lib.rs
crates/gen-guest-rust/: Cargo.toml
crates/gen-guest-rust/Source/: lib.rs
crates/gen-guest-ts/Source/: lib.rs
crates/gen-host/: Cargo.toml
crates/gen-host/Source/: lib.rs
crates/gen-js/: Cargo.toml
crates/gen-js/Source/: lib.rs
crates/gen-js/Source/js/: de_bool.js  de_bytes.js  de_char.js  de_f32.js  de_f64.js  de_list.js  de_option.js  de_result.js  de_s128.js  de_s16.js  de_s32.js  de_s64.js  de_s8.js  de_string.js  de_u128.js  de_u16.js  de_u32.js  de_u64.js  de_u8.js  de_varint.js  deserializer.js  ser_bool.js  ser_bytes.js  ser_char.js  ser_f32.js  ser_f64.js  ser_list.js  ser_option.js  ser_result.js  ser_s128.js  ser_s16.js  ser_s32.js  ser_s64.js  ser_s8.js  ser_string.js  ser_u128.js  ser_u16.js  ser_u32.js  ser_u64.js  ser_u8.js  (+2 more)
crates/gen-markdown/Source/: lib.rs
crates/gen-rust/: Cargo.toml
crates/gen-rust/Source/: lib.rs
crates/guest-rust/: Cargo.toml
crates/guest-rust-macro/: Cargo.toml
crates/guest-rust-macro/Source/: lib.rs
crates/guest-rust/Source/: lib.rs
crates/host/: Cargo.toml
crates/host-macro/: Cargo.toml
crates/host-macro/Source/: lib.rs
crates/host/Source/: lib.rs
crates/ipc-router-wip/: Cargo.toml
crates/ipc-router-wip/Source/: lib.rs
crates/rust-macro-shared/Source/: lib.rs
crates/wit-parser/: Cargo.toml  ast.json
crates/wit-parser/Source/: error.rs  lex.rs  lib.rs  parse.rs  typecheck.rs  util.rs
crates/wit-parser/fuzz/: Cargo.toml
crates/wit-parser/fuzz/fuzz_targets/: parse.rs
docs/: SUMMARY.md  WIT.md
docs/specs/: ABI.md
examples/greet/: .gitignore  Cargo.toml
examples/greet/Source/: app.rs  greet.js  main.rs
examples/greet/src-tauri/: Cargo.toml
examples/greet/src-tauri/Source/: main.rs
playground/: Cargo.toml  index.html  netlify.toml
playground/Source/: main.rs
playground/editor/: README.md  package.json  rollup.config.mjs
playground/editor/Source/: index.ts  wit.ts
wit/: multi_return.wit  records.wit  resources.wit  simple_functions.wit  unions.wit
