[package]
name = "tauri-bindgen-gen-rust"
authors.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
tauri-bindgen-core.workspace = true
wit-parser.workspace = true
heck.workspace = true
quote.workspace = true
proc-macro2.workspace = true
syn.workspace = true
log.workspace = true
