[package]
name = "tauri-bindgen-guest-rust-macro"
authors.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
proc-macro = true
path = "Source/lib.rs"

[dependencies]
proc-macro2 = "1.0"
syn = { version = "2.0" }
tauri-bindgen-gen-guest-rust = { path = "../gen-guest-rust" }
rust-macro-shared = { path = "../rust-macro-shared" }
