[package]
name = "tauri-bindgen-guest-rust"
authors.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
bitflags.workspace = true
tauri-bindgen-guest-rust-macro = { path = "../guest-rust-macro" }
wasm-bindgen-futures = "0.4.37"
wasm-bindgen = "0.2.87"
serde.workspace = true
tracing = { version = "0.1.37" }
postcard = { version = "1.0.7", features = ["alloc"] }
heapless = { version = "0.8.0" }
js-sys = "0.3.64"
thiserror.workspace = true

[dependencies.web-sys]
version = "0.3.64"
features = [
	'Headers',
	'Request',
	'RequestInit',
	'RequestMode',
	'Response',
	'Window',
]
