[package]
name = "tauri-bindgen-host"
authors.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
bitflags.workspace = true
tauri-bindgen-host-macro = { path = "../host-macro" }
async-trait = "0.1.73"
tauri.workspace = true
tracing = { version = "0.1.37", features = ["log", "log-always"] }
anyhow = { version = "1.0.75" }
serde.workspace = true
ipc-router-wip = { path = "../ipc-router-wip" }
generational-arena = "0.2.9"
