[package]
name = "ipc-router-wip"
authors.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = { version = "1.0.75" }
serde.workspace = true
log.workspace = true
postcard = { version = "1.0.7", features = ["alloc"] }
tauri.workspace = true
tokio = { version = "1.32.0", features = ["sync", "macros"] }
futures-util = "0.3.28"
