[package]
name = "wit-parser-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
env_logger = "0.10.0"

[dependencies.wit-parser]
path = ".."

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
opt-level = 3
codegen-units = 1
debug = false
lto = true
panic = "abort"
strip = true

[[bin]]
name = "parse"
path = "fuzz_targets/parse.rs"
test = false
doc = false
